edited settings and installer

--- a/res/settings.json
+++ b/res/settings.json
@@ -21,7 +21,7 @@
                 "name": "Windows PowerShell",
                 "commandline": "powershell.exe",
                 "hidden": false,
-                "colorScheme": "Monokai Octagon",
+                "colorScheme": "Monokai Cmder",
                 "cursorColor" : "#FFFFFF",
                 "cursorShape" : "bar",
                 "fontFace" : "Consolas",
@@ -29,16 +29,16 @@
                 "padding" : "0, 0, 0, 0",
                 "snapOnInput" : true,
                 "useAcrylic" : true,
-                "acrylicOpacity": 0.01,
+                "acrylicOpacity": 0.25,
                 "backgroundImage": "%userprofile%/AppData/Local/Packages/Microsoft.WindowsTerminal_8wekyb3d8bbwe/LocalState/window.jpg",
-                "backgroundImageOpacity": 0.1
+                "backgroundImageOpacity": 0.5
             },
             {
                 "guid": "{a4bc02f5-281b-42df-8308-bfebfbef99fb}",
                 "name": "Python3",
                 "commandline": "python -m IPython",
                 "hidden": false,
-                "colorScheme": "Monokai Vivid",
+                "colorScheme": "Monokai Soda",
                 "icon" : "%userprofile%/AppData/Local/Packages/Microsoft.WindowsTerminal_8wekyb3d8bbwe/LocalState/python.webp",
                 "cursorColor" : "#FFFFFF",
                 "cursorShape" : "bar",
@@ -47,9 +47,9 @@
                 "padding" : "0, 0, 0, 0",
                 "snapOnInput" : true,
                 "useAcrylic" : true,
-                "acrylicOpacity": 0.1,
+                "acrylicOpacity": 0.25,
                 "backgroundImage": "%userprofile%/AppData/Local/Packages/Microsoft.WindowsTerminal_8wekyb3d8bbwe/LocalState/python.jpg",
-                "backgroundImageOpacity": 0.1
+                "backgroundImageOpacity": 0.5
             },
             {
                 "guid": "{b453ae62-4e3d-5e58-b989-0a998ec441b8}",
@@ -63,46 +63,48 @@
     // Add custom color schemes to this array
     "schemes": [
         {
-            "name": "Monokai Octagon",
-            "black": "#000000",
-            "red": "#d81e00",
-            "green": "#5ea702",
-            "yellow": "#cfae00",
-            "blue": "#427ab3",
-            "purple": "#89658e",
-            "cyan": "#00a7aa",
-            "white": "#dbded8",
-            "brightBlack": "#686a66",
-            "brightRed": "#f54235",
-            "brightGreen": "#99e343",
-            "brightYellow": "#fdeb61",
-            "brightBlue": "#84b0d8",
-            "brightPurple": "#bc94b7",
-            "brightCyan": "#37e6e8",
-            "brightWhite": "#f1f1f0",
-            "background": "#282a3a",
-            "foreground": "#eaf2f1"
+            "name": "Monokai Cmder",
+            "black": "#272822",
+            "red": "#a70334",
+            "green": "#74aa04",
+            "yellow": "#b6b649",
+            "blue": "#01549e",
+            "purple": "#89569c",
+            "cyan": "#1a83a6",
+            "white": "#cacaca",
+            "brightBlack": "#7c7c7c",
+            "brightRed": "#f3044b",
+            "brightGreen": "#8dd006",
+            "brightYellow": "#cccc81",
+            "brightBlue": "#0383f5",
+            "brightPurple": "#a87db8",
+            "brightCyan": "#58c2e5",
+            "brightWhite": "#ffffff",
+            "background": "#272822",
+            "foreground": "#cacaca",
+            "selectionBackground": "#cccc81",
+            "cursorColor": "#ffffff"
         },
         {
-            "name": "Monokai Vivid",
-            "black": "#121212",
-            "red": "#fa2934",
-            "green": "#98e123",
-            "yellow": "#fff30a",
-            "blue": "#0443ff",
-            "purple": "#f800f8",
-            "cyan": "#01b6ed",
-            "white": "#ffffff",
-            "brightBlack": "#838383",
-            "brightRed": "#f6669d",
-            "brightGreen": "#b1e05f",
-            "brightYellow": "#fff26d",
-            "brightBlue": "#0443ff",
-            "brightPurple": "#f200f6",
-            "brightCyan": "#51ceff",
-            "brightWhite": "#ffffff",
-            "background": "#121212",
-            "foreground": "#f9f9f9"
+            "name": "Monokai Soda",
+            "black": "#1a1a1a",
+            "red": "#f4005f",
+            "green": "#98e024",
+            "yellow": "#fa8419",
+            "blue": "#9d65ff",
+            "purple": "#f4005f",
+            "cyan": "#58d1eb",
+            "white": "#c4c5b5",
+            "brightBlack": "#625e4c",
+            "brightRed": "#f4005f",
+            "brightGreen": "#98e024",
+            "brightYellow": "#e0d561",
+            "brightBlue": "#9d65ff",
+            "brightPurple": "#f4005f",
+            "brightCyan": "#58d1eb",
+            "brightWhite": "#f6f6ef",
+            "background": "#1a1a1a",
+            "foreground": "#c4c5b5"
           }
     ],
 
